--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,11 +50,11 @@
     <div class="panel-body">
         <label for="account"></label>
         <div class="input-group">
-            <span class="input-group-addon">  account</span>
+            <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
             <input ID="account" class="form-control" type="text" placeholder="your account">
         </div>
         <div class="input-group">
-            <span class="input-group-addon"> password</span>
+            <span class="input-group-addon"><span class="glyphicon glyphicon-pencil"></span></span>
             <input id="password" class="form-control" type="password" placeholder="password is neccesary">
         </div>
         <div id="btnGroup" style="margin: 10px 11%">
