--- a/src/main/resources/templates/COrderList.html
+++ b/src/main/resources/templates/COrderList.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>食堂 ==> 用户订餐信息</title>
     <!--<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
     <!--integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
     <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.css}">
     <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap-table.css}">
     <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap-switch.css}">
-    <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-table.css">
+    <!--<link type="text/css" rel="stylesheet" href="/static/css/bootstrap-table.css">-->
     <style>
         .myfooter {
             background-color: #5f5f5f;
@@ -30,12 +30,13 @@
 </head>
 <script th:src="@{/js/jquery.min.js}"></script>
 <script  th:src="@{/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/publicJS.js}"></script>
 <script th:src="@{/js/bootstrap-table.min.js}"></script>
 <script  th:src="@{/js/bootstrap-table-zh-CN.min.js}"></script>
 <script  th:src="@{/js/bootstrap-switch.min.js}"></script>
 
-<script src="/static/js/bootstrap-table.min.js"></script>
-<script src="/static/js/bootstrap-table-zh-CN.min.js"></script>
+<!--<script src="/static/js/bootstrap-table.min.js"></script>-->
+<!--<script src="/static/js/bootstrap-table-zh-CN.min.js"></script>-->
 <!--<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>-->
 <!--<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"-->
 <!--integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
@@ -44,7 +45,7 @@
 <div class="nav navbar-default mynav">
     <div class="container-fluid">
         <div class="navbar-header">
-            <div class="navbar-brand"><span style="font-size: 39px">Index</span></div>
+            <div class="navbar-brand"><span id="home" style="font-size: 39px"><span class="glyphicon glyphicon-home"></span>综合应用</span></div>
 
             <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#LinkPart"
                     aria-controls="bs-navbar" aria-expanded="false">
@@ -67,14 +68,23 @@
                         <li><a href="/recycledArticle">回收站</a></li>
                     </ul>
                 </li>
-                <li><a href="#">PART 3</a></li>
+                <li class="dropdown">
+                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
+                       aria-expanded="false">物品<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a id="myItem" href="#">我的物品</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a id="applyItem" href="#">领用申请</a></li>
+                        <li><a id="applyRecord" href="#">申请记录</a></li>
+                    </ul>
+                </li>
                 <li class="dropdown">
                     <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
                        aria-expanded="false">食堂应用<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a id="order" href="#">用餐预定</a></li>
-                        <li><a href="#">订餐详情</a></li>
-                        <li><a href="#">订餐记录</a></li>
+                        <li><a id="userOrders" href="#">订餐详情</a></li>
+                        <li><a id="userCR" href="#">订餐记录</a></li>
                     </ul>
                 </li>
             </ul>
@@ -225,7 +235,7 @@
         cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
         pagination: true,                   //是否显示分页（*）
         sortable: true,                     //是否启用排序
-        sortName:"CR_EDT_TIME",
+        sortName:"O_TIME",
         sortOrder: "desc",                   //排序方式
         sidePagination: "server",           //分页方式：client客户端分页，server服务端分页（*）
         pageNumber:1,                       //初始化加载第一页，默认第一页
@@ -337,19 +347,6 @@
     var L_SWITCH;
     var D_SWITCH;
     $(function () {
-        var data = window.sessionStorage.getItem('name');
-        if (data !=""){
-            $('#userNav').html('<li class="dropdown">\n' +
-                ' <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"\n' +
-                ' aria-expanded="false" >'+data+'<span class="caret"></span></a>\n' +
-                ' <ul class="dropdown-menu">\n' +
-                ' <li><a href="/user/getPerson.do?name='+data+'">个人信息</a></li>\n' +
-                ' <li><a href="/user/editPerson.do?name='+data+'">修改个人信息</a></li>\n' +
-                ' <li><a href="/user/editPassword.do?name='+data+'">修改密码</a></li>\n' +
-                ' </ul>\n' +
-                ' </li>' +
-                '<li><a href="#" onclick="logout()">log out</a></li>')
-        }
 
         $('#order').on('click',function () {
 
@@ -489,35 +486,9 @@
         return obj;
     }
 
-    function logout() {
-        window.sessionStorage.removeItem('name');
-        window.location.href='/'
-    }
 
-    function dateFmt_yyMMdd(str) {
-        var org = new Date(str);
-        var yy = org.getFullYear();
-        var MM = org.getMonth()+1;
-        var dd = org.getDate();
 
-        return yy+'-'+MM+'-'+dd;
-    }
 
-    function dateFmt_yyMMdd_hhmmss(str) {
-        var org = new Date(str);
-        var yy = org.getFullYear();
-        var MM = org.getMonth()+1;
-        var dd = org.getDate();
-
-        var hh = org.getHours();
-
-        var mm = org.getMinutes();
-        mm = mm < 10 ? ('0' + mm) : mm;
-        var ss = org.getSeconds();
-        ss = ss < 10 ? ('0' + ss) : ss;
-
-        return yy+'-'+MM+'-'+dd+' '+hh+':'+mm+':'+ss;
-    }
 
 </script>
 </html>
