--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>主页</title>
     <!--<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
           <!--integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
     <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.css}">
@@ -33,6 +33,7 @@
 </head>
 <script th:src="@{/js/jquery.min.js}"></script>
 <script  th:src="@{/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/publicJS.js}"></script>
 <!--<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>-->
 <!--<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"-->
         <!--integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
@@ -41,7 +42,7 @@
 <div class="nav navbar-default mynav">
     <div class="container-fluid">
         <div class="navbar-header">
-            <div class="navbar-brand"><span style="font-size: 39px">Index</span></div>
+            <div class="navbar-brand"><span id="home" style="font-size: 20px"><span class="glyphicon glyphicon-home"></span>  综合应用</span></div>
 
             <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#LinkPart"
                     aria-controls="bs-navbar" aria-expanded="false">
@@ -64,14 +65,23 @@
                         <li><a href="/recycledArticle">回收站</a></li>
                     </ul>
                 </li>
-                <li><a href="#">PART 3</a></li>
+                <li class="dropdown">
+                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
+                       aria-expanded="false">物品<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a id="myItem" href="#">我的物品</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a id="applyItem" href="#">领用申请</a></li>
+                        <li><a id="applyRecord" href="#">申请记录</a></li>
+                    </ul>
+                </li>
                 <li class="dropdown">
                     <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
                        aria-expanded="false">食堂应用<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a id="order" href="#">用餐预定</a></li>
                         <li><a id="userOrders" href="#">订餐详情</a></li>
-                        <li><a href="#">订餐记录</a></li>
+                        <li><a id="userCR" href="#">订餐记录</a></li>
                     </ul>
                 </li>
             </ul>
@@ -121,35 +131,35 @@
 </footer>
 </body>
 <script>
-    $(function () {
-        var data = window.sessionStorage.getItem('name');
-        if (data != null) {
-            $('#userNav').html('<li class="dropdown">\n' +
-                ' <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"\n' +
-                ' aria-expanded="false" >' + data + '<span class="caret"></span></a>\n' +
-                ' <ul class="dropdown-menu">\n' +
-                ' <li><a href="/user/getPerson.do?name=' + data + '">个人信息</a></li>\n' +
-                ' <li><a href="/user/editPerson.do?name=' + data + '">修改个人信息</a></li>\n' +
-                ' <li><a href="/user/editPassword.do?name=' + data + '">修改密码</a></li>\n' +
-                ' </ul>\n' +
-                ' </li>' +
-                '<li><a href="#" onclick="logout()">log out</a></li>')
-        }
-
-        $('#order').on('click',function () {
-            window.location.href = "/canteen/orderPage?uid=" + window.sessionStorage.getItem('uid') + "";
-        });
-
-        $('#userOrders').on('click',function () {
-            window.location.href = "/canteen/userOrders?uid=" + window.sessionStorage.getItem('uid') + "";
-        })
-
-    });
-
-    function logout() {
-        window.sessionStorage.removeItem('name');
-        window.location.href='/'
-    }
+    // $(function () {
+    //     var data = window.sessionStorage.getItem('name');
+    //     if (data != null) {
+    //         $('#userNav').html('<li class="dropdown">\n' +
+    //             ' <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"\n' +
+    //             ' aria-expanded="false" >' + data + '<span class="caret"></span></a>\n' +
+    //             ' <ul class="dropdown-menu">\n' +
+    //             ' <li><a href="/user/getPerson.do?name=' + data + '">个人信息</a></li>\n' +
+    //             ' <li><a href="/user/editPerson.do?name=' + data + '">修改个人信息</a></li>\n' +
+    //             ' <li><a href="/user/editPassword.do?name=' + data + '">修改密码</a></li>\n' +
+    //             ' </ul>\n' +
+    //             ' </li>' +
+    //             '<li><a href="#" onclick="logout()">log out</a></li>')
+    //     }
+    //
+    //     $('#order').on('click',function () {
+    //         window.location.href = "/canteen/orderPage?uid=" + window.sessionStorage.getItem('uid') + "";
+    //     });
+    //
+    //     $('#userOrders').on('click',function () {
+    //         window.location.href = "/canteen/userOrders?uid=" + window.sessionStorage.getItem('uid') + "";
+    //     })
+    //
+    // });
+    //
+    // function logout() {
+    //     window.sessionStorage.removeItem('name');
+    //     window.location.href='/'
+    // }
 
 </script>
 </html>
