--- a/src/main/resources/templates/canteenOrder.html
+++ b/src/main/resources/templates/canteenOrder.html
@@ -44,7 +44,7 @@
 <div class="nav navbar-default mynav">
     <div class="container-fluid">
         <div class="navbar-header">
-            <div class="navbar-brand"><span id="home" style="font-size: 39px"><span class="glyphicon glyphicon-home"></span>综合应用</span></div>
+            <div class="navbar-brand"><span id="home" style="font-size: 20px"><span class="glyphicon glyphicon-home"></span>  综合应用</span></div>
 
             <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#LinkPart"
                     aria-controls="bs-navbar" aria-expanded="false">
@@ -89,7 +89,7 @@
             </ul>
             <input id="nameNav" type="hidden" th:value="${name}" >
             <ul class="nav navbar-nav navbar-right" id="userNav">
-                <li><a href="#">LOGIN or SIGN UP</a></li>
+                <li><a href="/login">LOGIN or SIGN UP</a></li>
             </ul>
         </div>
     </div>
