--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -36,7 +36,7 @@
 <div class="nav navbar-default mynav">
     <div class="container-fluid">
         <div class="navbar-header">
-            <div class="navbar-brand"><span style="font-size: 39px">Index</span></div>
+            <div class="navbar-brand"><span id="home" style="font-size: 20px"><span class="glyphicon glyphicon-home"></span>  综合应用</span></div>
 
             <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#LinkPart"
                     aria-controls="bs-navbar" aria-expanded="false">
@@ -59,20 +59,29 @@
                         <li><a href="/recycledArticle">回收站</a></li>
                     </ul>
                 </li>
-                <li><a href="#">PART 3</a></li>
                 <li class="dropdown">
                     <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
-                       aria-expanded="false">SELECT<span class="caret"></span></a>
+                       aria-expanded="false">物品<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a id="myItem" href="#">我的物品</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a id="applyItem" href="#">领用申请</a></li>
+                        <li><a id="applyRecord" href="#">申请记录</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
+                       aria-expanded="false">食堂应用<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a id="order" href="#">用餐预定</a></li>
-                        <li><a href="#">订餐详情</a></li>
-                        <li><a href="#">订餐记录</a></li>
+                        <li><a id="userOrders" href="#">订餐详情</a></li>
+                        <li><a id="userCR" href="#">订餐记录</a></li>
                     </ul>
                 </li>
             </ul>
             <input id="nameNav" type="hidden" th:value="${name}" >
             <ul class="nav navbar-nav navbar-right" id="userNav">
-                <li><a href="#">LOGIN or SIGN UP</a></li>
+                <li><a href="/login">LOGIN or SIGN UP</a></li>
             </ul>
         </div>
     </div>
