--- a/src/main/resources/templates/COrderList.html
+++ b/src/main/resources/templates/COrderList.html
@@ -45,7 +45,7 @@
 <div class="nav navbar-default mynav">
     <div class="container-fluid">
         <div class="navbar-header">
-            <div class="navbar-brand"><span id="home" style="font-size: 39px"><span class="glyphicon glyphicon-home"></span>综合应用</span></div>
+            <div class="navbar-brand"><span id="home" style="font-size: 20px"><span class="glyphicon glyphicon-home"></span>  综合应用</span></div>
 
             <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#LinkPart"
                     aria-controls="bs-navbar" aria-expanded="false">
@@ -90,7 +90,7 @@
             </ul>
             <input id="nameNav" type="hidden" th:value="${name}" >
             <ul class="nav navbar-nav navbar-right" id="userNav">
-                <li><a href="#">LOGIN or SIGN UP</a></li>
+                <li><a href="/login">LOGIN or SIGN UP</a></li>
             </ul>
         </div>
     </div>
@@ -348,11 +348,6 @@
     var D_SWITCH;
     $(function () {
 
-        $('#order').on('click',function () {
-
-            window.location.href = "/canteen/orderPage?uid=" + window.sessionStorage.getItem('uid') + "";
-        })
-
         BF_SWITCH = $('#breakfast').bootstrapSwitch({
             size:'small',
             onText: '订餐',
@@ -379,9 +374,6 @@
             modal.find('.modal-title').text('订餐编号 COID： ' + recipient);
         });
 
-        $('.orderSwitch').on('click',function (event) {
-            // $('.orderSwitch').bootstrapSwitch('toggleState');
-        })
 
         $('#table').on('click-row.bs.table',function (field ,row) {
             EDIT_OTIME =new Date(row.oTime);
