为项目整合了Shiro，用于权限控制。 目前仅用来控制了页面的访问和实现了remenberMe的功能。 更多的作用有待挖掘。
//2018.6.13

使用shiro实现了控制并发登陆的功能。同一个用户只能在一个地方登陆。

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -100,7 +100,9 @@
     </div>
 </div>
 <div class="container">
-    <input type="hidden" id="username" >
+    <!--<input type="hidden" id="username" th:value="${sessionScope.name}">-->
+    <!--<input type="hidden" id="uid" th:value="${sessionScope.uid}">-->
+    <!-- 测试两个属性是否放到session中 -->
     <div class="context">
         <h1>正文标题</h1>
         <p>正文内容-正文内容-正文内容-正文内容-正文内容-正文内容-正文内容-正文内容</p>
@@ -131,6 +133,13 @@
 </footer>
 </body>
 <script>
+
+    $(function () {
+        var username = $('#username');
+        var uid = $('#uid');
+
+        console.log("username,uid ==> "+username+","+uid);
+    })
 
 
 </script>
