--- a/src/main/resources/templates/myArticle.html
+++ b/src/main/resources/templates/myArticle.html
@@ -187,7 +187,7 @@
     var Rows = 20;
     var pageTotal = 0;
     var nowPage = 1;
-    var nowUser = window.sessionStorage.getItem('name');
+    var nowUser = window.localStorage.getItem('name');
 
     function getListData(page) {
         var parms = {
