--- a/src/main/resources/templates/sysBackend.html
+++ b/src/main/resources/templates/sysBackend.html
@@ -79,24 +79,24 @@
 </div>
 <div class="container" style="height: 768px;width: 100%;padding-left: 10px">
     <div class="row" style="height: inherit">
-        <div class="visible-md-block visible-lg-block" style="background-color: #e7e7e7;width: 200px;height: inherit">
-            <div class="nav sidebar">
-                <div class="container-fluid">
-                    <div id="ToolPart" class="collapse navbar-collapse">
-                        <ul class="nav navbar-sidebar">
-                            <li><a href="#">PART 1</a></li>
-                            <li><a href="#">PART 2</a></li>
-                            <li><a href="#">PART 3</a></li>
-                        </ul>
+        <div class="visible-md-block visible-lg-block">
+            <!--<div class="nav sidebar">-->
+                <!--<div class="container-fluid">-->
+                    <!--<div id="ToolPart" class="collapse navbar-collapse">-->
+                        <!--<ul class="nav navbar-sidebar">-->
+                            <!--<li><a href="#">PART 1</a></li>-->
+                            <!--<li><a href="#">PART 2</a></li>-->
+                            <!--<li><a href="#">PART 3</a></li>-->
+                        <!--</ul>-->
 
-                        <ul class="nav navbar-sidebar">
-                            <li><a href="#">PART 1</a></li>
-                            <li><a href="#">PART 2</a></li>
-                            <li><a href="#">PART 3</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+                        <!--<ul class="nav navbar-sidebar">-->
+                            <!--<li><a href="#">PART 1</a></li>-->
+                            <!--<li><a href="#">PART 2</a></li>-->
+                            <!--<li><a href="#">PART 3</a></li>-->
+                        <!--</ul>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
         <div style="height: inherit;width: fit-content"></div>
     </div>
