--- a/src/main/resources/templates/sysBackend-persons.html
+++ b/src/main/resources/templates/sysBackend-persons.html
@@ -65,7 +65,7 @@
         <div id="LinkPart" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-left">
                 <li class="active"><a href="#" onclick="goToPersonCtrl()" >人员管理</a></li>
-                <li><a href="#">食堂管理</a></li>
+                <li><a href="#" onclick="goToCanteenCtrl()">食堂管理</a></li>
                 <li><a href="#">文章管理</a></li>
                 <li><a href="#">物品管理</a></li>
                 <li class="dropdown">
