--- a/src/main/resources/templates/sysBackend-canteen.html
+++ b/src/main/resources/templates/sysBackend-canteen.html
@@ -39,7 +39,7 @@
 <script th:src="@{/js/bootstrap-table.min.js}"></script>
 <script th:src="@{/js/bootstrap-table-zh-CN.min.js}"></script>
 <script th:src="@{/js/bootstrap-select.min.js}"></script>
-<script th:src="@{/js/BackendCanteen}"></script>
+<script th:src="@{/js/BackendCanteen.js}"></script>
 <script src="/static/js/bootstrap-select.min.js"></script>
 <script src="/static/js/bootstrap-table.min.js"></script>
 <script src="/static/js/bootstrap-table-zh-CN.min.js"></script>
@@ -63,8 +63,8 @@
         </div>
         <div id="LinkPart" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-left">
-                <li><a href="#" onclick="goToPersonCtrl()">人员管理</a></li>
-                <li><a href="#">食堂管理</a></li>
+                <li><a href="#" onclick="goToPersonCtrl();">人员管理</a></li>
+                <li><a href="#" onclick="goToCanteenCtrl();">食堂管理</a></li>
                 <li><a href="#">文章管理</a></li>
                 <li><a href="#">物品管理</a></li>
                 <li class="dropdown">
@@ -111,27 +111,27 @@
                 <div  class="page-header col-md-12 col-sm-12 col-xs-12">
                     <h1>查看订餐情况 <small>Namelist</small></h1>
                 </div>
-                <div id="msgDiv1"class="col-md-12 col-sm-12 col-xs-12" style="height: auto"></div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">搜索选项</div>
-                    <div class="panel-body">
-                        <form id="querySelection" class="form-inline">
-                            <div class="queryComponent form-group">
-                                <label for="date">日期：</label>
-                                <input type="text" id="date" name="date">
-                            </div>
-                            <div class="queryComponent form-group">
-                                <label for="date">姓名：</label>
-                                <input type="text" id="personName" name="personName">
-                            </div>
-                            <div class="queryComponent form-group">
-                                <label for="date">部室：</label>
-                                <select class="selectpicker" id="dept" name="dept"></select>
-                            </div>
-                        </form>
+                <div id="msgDiv1"class="col-md-12 col-sm-12 col-xs-12" style="margin-top: 1px"></div>
+                <div>
+                    <div class="panel panel-default" style="margin: 150px 30px 10px 30px">
+                        <div class="panel-heading">搜索选项</div>
+                        <div class="panel-body">
+                            <form id="querySelection" class="form-inline">
+                                <div class="queryComponent form-group">
+                                    <label for="date">日期：</label>
+                                    <input type="text" class="text" id="date" name="date">
+                                </div>
+                                <div class="queryComponent form-group">
+                                    <label for="date">姓名：</label>
+                                    <input type="text" class="text" id="personName" name="personName">
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
-                <table id="orderTable"></table>
+                <div style="margin: 0px 30px">
+                    <table id="orderTable" ></table>
+                </div>
             </div>
             <div id="generateNamelist" class="row ctrlCompent">
                 <div  class="page-header col-md-12 col-sm-12 col-xs-12">
@@ -165,4 +165,141 @@
     </div>
 </div>
 </body>
+
+<script>
+    $(
+        $('#orderTable').bootstrapTable({
+            url: '/canteen/getBackendOrders.do',         //请求后台的URL（*）
+            method: 'get',                      //请求方式（*）
+            toolbar: '#toolbar',                //工具按钮用哪个容器
+            striped: true,                      //是否显示行间隔色
+            cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
+            pagination: true,                   //是否显示分页（*）
+            sortable: true,                     //是否启用排序
+            sortName:"co.oTime",
+            sortOrder: "asc",                   //排序方式
+            sidePagination: "server",           //分页方式：client客户端分页，server服务端分页（*）
+            pageNumber:1,                       //初始化加载第一页，默认第一页
+            pageSize: 20,                       //每页的记录行数（*）
+            pageList: [20, 35, 50, 100],        //可供选择的每页的行数（*）
+            queryParams:  function (params) {
+                //这里的键的名字和控制器的变量名必须一致，这边改动，控制器也需要改成一样的
+                var temp = {
+                    rows: params.limit,                         //页面大小
+                    page: (params.offset / params.limit) + 1,   //页码
+                    sort: params.sort,      //排序列名
+                    sortOrder: params.order //排位命令（desc，asc）
+                };
+                return temp;
+            },//传递参数（*）
+            // search: true,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
+            // strictSearch: true,
+            showColumns: true,                  //是否显示所有的列
+            showRefresh: true,                  //是否显示刷新按钮
+            minimumCountColumns: 2,             //最少允许的列数
+            clickToSelect: true,                //是否启用点击选中行
+            height: 1000,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+            uniqueId: "ID",                     //每一行的唯一标识，一般为主键列
+            showToggle:true,                    //是否显示详细视图和列表视图的切换按钮
+            cardView: false,                    //是否显示详细视图
+            detailView: false,                   //是否显示父子表
+            icons:{
+                paginationSwitchDown: 'glyphicon-collapse-down icon-chevron-down',
+                paginationSwitchUp: 'glyphicon-collapse-up icon-chevron-up',
+                refresh: 'glyphicon-refresh icon-refresh',
+                toggle: 'glyphicon-list-alt icon-list-alt',
+                columns: 'glyphicon-th icon-th',
+                detailOpen: 'glyphicon-plus icon-plus',
+                detailClose: 'glyphicon-minus icon-minus'
+            },
+            columns:[
+                [
+                    {
+                        field: 'coid',
+                        title: '订餐编号',
+                        rowspan:2,
+                        align:'center'
+                    },{
+                    field: '',
+                    title: '早餐',
+                    colspan:2,
+                    align:'center'
+                    },{
+                    field: '',
+                    title: '午餐',
+                    colspan:2,
+                    align:'center'
+                    },{
+                    field: '',
+                    title: '晚餐',
+                    colspan:2,
+                    align:'center'
+                    },{
+                    field: 'oTime',
+                    title: '预定日期',
+                    rowspan:2,
+                    formatter:function (value,row,index) {
+                        return dateFmt_yyMMdd(row.oTime);
+                    },
+                    align:'center'},{
+                    field: 'user',
+                    title: '订餐人',
+                    rowspan:2,
+                    formatter:function (value,row,index) {
+                        return row.user.username;
+                    },
+                    align:'center'}
+                ],[
+                    {
+                        field: 'breakfast',
+                        title: '订餐情况',
+                        formatter:function (value,row,index) {
+                            if (row.breakfast === 0){
+                                return '<span class="glyphicon glyphicon-remove"></span>';
+                            }else {
+                                return '<span class="glyphicon glyphicon-ok"></span>';
+                            }
+                        },
+                        align:'center'
+                    },{
+                        field: 'bfMany',
+                        title: '数量/份',
+                        align:'center'
+                    },{
+                        field: 'lunch',
+                        title: '订餐情况',
+                        formatter:function (value,row,index) {
+                            if (row.lunch === 0){
+                                return '<span class="glyphicon glyphicon-remove"></span>';
+                            }else {
+                                return '<span class="glyphicon glyphicon-ok"></span>';
+                            }
+                        },
+                        align:'center'
+                    },{
+                        field: 'lMany',
+                        title: '数量/份',
+                        align:'center'
+                    },{
+                        field: 'dinner',
+                        title: '晚餐',
+                        formatter:function (value,row,index) {
+                            if (row.dinner === 0){
+                                return '<span class="glyphicon glyphicon-remove"></span>';
+                            }else {
+                                return '<span class="glyphicon glyphicon-ok"></span>';
+                            }
+                        },
+                        align:'center'
+                    },{
+                        field: 'dMany',
+                        title: '数量/份',
+                        align:'center'
+                    }
+                ]
+            ]
+        })
+    )
+
+</script>
 </html>
